Fixed show content vertical alignement

--- a/src/sass/objects/_shows.scss
+++ b/src/sass/objects/_shows.scss
@@ -36,7 +36,7 @@
 }
 
 .show__infos {
-    min-height: 140px;
+    min-height: 110px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
